[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ragdag"
version = "0.0.1"
description = "A knowledge graph management system."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/RMWinslow/ragdag"
